--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,28 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+button {
+  display: inline-block;
+  font-size: 16px;
+  padding: 10px 20px;
+  margin: 10px 2px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  background-color: #283145;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 2px #999;
+}
+
+button:hover {background-color: #1a1f2c}
+
+button:active {
+  background-color: #1a212f;
+  box-shadow: 0 5px #666;
+  transform: translateY(1px);
+}
+
